insha base day 1, 2, 3, 4

--- a/irc/Makefile
+++ b/irc/Makefile
@@ -3,7 +3,7 @@ NAME = ircserv
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRC = main.cpp Server.cpp
+SRC = main.cpp Server.cpp  CommandDispatcher.cpp  
 OBJ = $(SRC:.cpp=.o)
 
 all: $(NAME)
